--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "./another-devblog"
+title                    : "./makethings"
 title_separator          : "-"
 name                     : "Chad Ramsey"
 description              : # "An amazing website."
