--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "Chad Ramsey"
   avatar           : "/assets/images/bio-photo.jpg"
-  bio              : "Software development | Pixel art | Full stack developer by day and #indiedev enthusiast when time allows."
+  bio              : "Software development | Full stack developer by day and #indiedev enthusiast when time allows."
   location         : "Charlotte, NC"
   email            :
   links:
